--- a/visualiser/src/index.css
+++ b/visualiser/src/index.css
@@ -1,13 +1,35 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+table {
+  border: 1px solid black;
+  border-collapse: collapse;
+  margin: 5px;
+}
+
+table td,
+table th {
+  border: 1px solid black;
+  text-align: center;
+  padding: 5px;
+}
+
+label span {
+  display: inline-block;
+  width: 5rem;
+}
+
+input[type="checkbox"] {
+  margin: 0;
 }
